@@ -262,6 +262,8 @@ if ($use64) {
 }
 
 my @legendre_sums = (
+  [ 0,  92372, 0],
+  [ 5,  15, 1],
   [ 89, 4, 21 ],
   [ 46, 4, 11 ],
   [ 47, 4, 12 ],
